--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "git-exclude",
     "displayName": "Git Exclude",
     "description": "Edit Git exclude File",
-    "version": "0.0.4",
+    "version": "0.1.1",
     "publisher": "boukichi",
     "engines": {
         "vscode": "^1.18.0"
@@ -13,11 +13,14 @@
     "keywords": [
         "git"
     ],
+    "license": "MIT",
     "activationEvents": [
         "onCommand:GitExclude.editGitExclude",
         "onCommand:GitExclude.appendGitExcludeUri",
         "onCommand:GitExclude.skipGitWorktreeUri",
-        "onCommand:GitExclude.noSkipGitWorktreeUri"
+        "onCommand:GitExclude.noSkipGitWorktreeUri",
+        "onCommand:GitExclude.appendGitExcludeUriSCM",
+        "onCommand:GitExclude.skipGitWorktreeUriSCM"
     ],
     "repository": {
         "type": "git",
@@ -41,6 +44,14 @@
             {
                 "command": "GitExclude.noSkipGitWorktreeUri",
                 "title": "%GitExclude.noSkipGitWorktreeUri.title%"
+            },
+            {
+                "command": "GitExclude.appendGitExcludeUriSCM",
+                "title": "%GitExclude.appendGitExcludeUri.title%"
+            },
+            {
+                "command": "GitExclude.skipGitWorktreeUriSCM",
+                "title": "%GitExclude.skipGitWorktreeUri.title%"
             }
         ],
         "menus": {
@@ -57,6 +68,16 @@
                     "command": "GitExclude.noSkipGitWorktreeUri",
                     "group": "GitExclude"
                 }
+            ],
+            "scm/resourceState/context": [
+                {
+                    "command": "GitExclude.appendGitExcludeUriSCM",
+                    "group": "GitExclude"
+                },
+                {
+                    "command": "GitExclude.skipGitWorktreeUriSCM",
+                    "group": "GitExclude"
+                }
             ]
         }
     },
@@ -68,9 +89,9 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.6",
-        "@types/node": "^7.0.43",
-        "@types/mocha": "^2.2.42"
+        "@types/mocha": "^2.2.48",
+        "@types/node": "^7.0.61",
+        "typescript": "^2.8.3",
+        "vscode": "^1.1.16"
     }
 }
