--- a/package.json
+++ b/package.json
@@ -90,10 +90,11 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "@types/mocha": "^5.2.7",
-        "@types/node": "^12.0.8",
-        "typescript": "^3.5.2",
-        "vscode": "^1.1.34"
+        "@types/mocha": "^7.0.2",
+        "@types/node": "^13.13.2",
+        "minimist": "^1.2.5",
+        "typescript": "^3.8.3",
+        "vscode": "^1.1.37"
     },
     "dependencies": {}
 }
