Added "Show current File/Folder status" Improved Context menu

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "git-exclude",
     "displayName": "Git Exclude",
     "description": "Edit Git exclude File",
-    "version": "0.2.1",
+    "version": "0.3.0",
     "publisher": "boukichi",
     "license": "MIT",
     "icon": "images/icon.png",
@@ -21,6 +21,7 @@
         "git"
     ],
     "activationEvents": [
+        "onCommand:GitExclude.showFileStatus",
         "onCommand:GitExclude.editGitExclude",
         "onCommand:GitExclude.appendGitExcludeUri",
         "onCommand:GitExclude.skipGitWorktreeUri",
@@ -35,77 +36,142 @@
     "contributes": {
         "commands": [
             {
+                "command": "GitExclude.showFileStatus",
+                "title": "%GitExclude.showFileStatus.title%",
+                "category": "GitExclude"
+            },
+            {
                 "command": "GitExclude.editGitExclude",
-                "title": "%GitExclude.editGitExclude.title%"
+                "title": "%GitExclude.editGitExclude.title%",
+                "category": "GitExclude"
             },
             {
                 "command": "GitExclude.appendGitExcludeUri",
-                "title": "%GitExclude.appendGitExcludeUri.title%"
+                "title": "%GitExclude.appendGitExcludeUri.title%",
+                "category": "GitExclude"
             },
             {
                 "command": "GitExclude.skipGitWorktreeUri",
-                "title": "%GitExclude.skipGitWorktreeUri.title%"
+                "title": "%GitExclude.skipGitWorktreeUri.title%",
+                "category": "GitExclude"
             },
             {
                 "command": "GitExclude.noSkipGitWorktreeUri",
-                "title": "%GitExclude.noSkipGitWorktreeUri.title%"
+                "title": "%GitExclude.noSkipGitWorktreeUri.title%",
+                "category": "GitExclude"
             },
             {
                 "command": "GitExclude.skipGitWorktreeUri",
-                "title": "%GitExclude.skipGitWorktreeUri.title%"
+                "title": "%GitExclude.skipGitWorktreeUri.title%",
+                "category": "GitExclude"
             },
             {
                 "command": "GitExclude.noSkipGitWorktreeUri",
-                "title": "%GitExclude.noSkipGitWorktreeUri.title%"
+                "title": "%GitExclude.noSkipGitWorktreeUri.title%",
+                "category": "GitExclude"
             },
             {
                 "command": "GitExclude.setAssumeUnchangedUri",
-                "title": "%GitExclude.setAssumeUnchangedUri.title%"
+                "title": "%GitExclude.setAssumeUnchangedUri.title%",
+                "category": "GitExclude"
             },
             {
                 "command": "GitExclude.noAssumeUnchangedUri",
-                "title": "%GitExclude.noAssumeUnchangedUri.title%"
+                "title": "%GitExclude.noAssumeUnchangedUri.title%",
+                "category": "GitExclude"
             },
             {
                 "command": "GitExclude.appendGitExcludeUriSCM",
-                "title": "%GitExclude.appendGitExcludeUri.title%"
+                "title": "%GitExclude.appendGitExcludeUri.title%",
+                "category": "GitExclude"
             },
             {
                 "command": "GitExclude.skipGitWorktreeUriSCM",
-                "title": "%GitExclude.skipGitWorktreeUri.title%"
+                "title": "%GitExclude.skipGitWorktreeUri.title%",
+                "category": "GitExclude"
             },
             {
                 "command": "GitExclude.setAssumeUnchangedSCM",
-                "title": "%GitExclude.setAssumeUnchangedUri.title%"
+                "title": "%GitExclude.setAssumeUnchangedUri.title%",
+                "category": "GitExclude"
             }
         ],
         "menus": {
+            "commandPalette": [
+                {
+                    "command": "GitExclude.appendGitExcludeUriSCM",
+                    "when": "false"
+                },
+                {
+                    "command": "GitExclude.skipGitWorktreeUriSCM",
+                    "when": "false"
+                },
+                {
+                    "command": "GitExclude.setAssumeUnchangedSCM",
+                    "when": "false"
+                }
+            ],
             "explorer/context": [
                 {
-                    "command": "GitExclude.appendGitExcludeUri",
-                    "group": "GitExclude"
-                },
-                {
-                    "command": "GitExclude.skipGitWorktreeUri",
-                    "group": "GitExclude"
-                },
-                {
-                    "command": "GitExclude.noSkipGitWorktreeUri",
-                    "group": "GitExclude"
-                },
-                {
-                    "command": "GitExclude.setAssumeUnchangedUri",
-                    "group": "GitExclude"
-                },
-                {
-                    "command": "GitExclude.noAssumeUnchangedUri",
+                    "submenu": "git-exclude.explorer-submenu",
                     "group": "GitExclude"
                 }
             ],
+            "editor/title/context": [
+                {
+                    "submenu": "git-exclude.explorer-submenu",
+                    "group": "GitExclude"
+                }
+            ],
+
+            "git-exclude.explorer-submenu": [
+                {
+                    "command": "GitExclude.appendGitExcludeUri",
+                    "group": "GitExclude@1"
+                },
+                {
+                    "command": "GitExclude.editGitExclude",
+                    "group": "GitExclude@2"
+                },
+                {
+                    "command": "GitExclude.showFileStatus",
+                    "group": "GitExclude@3"
+                },
+                {
+                    "submenu": "git-exclude.submenu.skip",
+                    "group": "GitExclude@4"
+                },
+                {
+                    "submenu": "git-exclude.submenu.assume",
+                    "group": "GitExclude@5"
+                }
+            ],
+
+            "git-exclude.submenu.skip": [
+                {
+                    "command": "GitExclude.skipGitWorktreeUri",
+                    "group": "GitExcludeSkip@1"
+                },
+                {
+                    "command": "GitExclude.noSkipGitWorktreeUri",
+                    "group": "GitExcludeSkip@2"
+                }
+            ],
+            "git-exclude.submenu.assume": [
+                {
+                    "command": "GitExclude.setAssumeUnchangedUri",
+                    "group": "GitExcludeAssume@1"
+                },
+                {
+                    "command": "GitExclude.noAssumeUnchangedUri",
+                    "group": "GitExcludeAssume@2"
+                }
+            ],
+
             "scm/resourceState/context": [
                 {
                     "command": "GitExclude.appendGitExcludeUriSCM",
-                    "group": "GitExclude"
+                    "group": "GitExclude@1"
                 },
                 {
                     "command": "GitExclude.skipGitWorktreeUriSCM",
@@ -116,7 +182,12 @@
                     "group": "GitExclude"
                 }
             ]
-        }
+        },
+        "submenus": [
+            {"id": "git-exclude.explorer-submenu", "label": "GitExclude" },
+            {"id": "git-exclude.submenu.skip", "label": "Skip" },
+            {"id": "git-exclude.submenu.assume", "label": "Assume" }
+        ]
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
